owl-parser/src/parser/snapshots/owl_parser__parser__expr__tests__bool-lit-false.snap
---
source: owl-parser/src/parser/expr.rs
expression: "expr(\"false\")"

---
Expr {
    kind: BoolLit(
        false,
    ),
    span: 0..5,
}
