owl-parser/src/parser/snapshots/owl_parser__parser__expr__tests__double-2.0.snap
---
source: owl-parser/src/parser/expr.rs
expression: "expr(\"2.0\")"

---
Expr {
    kind: NumberLit(
        2.0,
    ),
    span: 0..3,
}
