owl-parser/src/parser/snapshots/owl_parser__parser__expr__tests__fn-call-with-args.snap
---
source: owl-parser/src/parser/expr.rs
expression: "expr(\"foo(1, bar)\")"

---
Expr {
    kind: FnCall {
        callee: Expr {
            kind: Identifier(
                "foo",
            ),
            span: 0..3,
        },
        args: [
            Expr {
                kind: NumberLit(
                    1.0,
                ),
                span: 4..5,
            },
            Expr {
                kind: Identifier(
                    "bar",
                ),
                span: 7..10,
            },
        ],
    },
    span: 0..11,
}
